--- a/src/assets/scss/media/partials/default-media.scss
+++ b/src/assets/scss/media/partials/default-media.scss
@@ -76,9 +76,9 @@
         }
     }
     .swiper-container {
-        height: 284px;
+       // height: 284px;
         img {
-            height: 211px;
+           // height: 211px;
         }
     }
     .photo-add{&__file{ max-width: 320px ;}}
