--- a/src/assets/scss/partials/default.scss
+++ b/src/assets/scss/partials/default.scss
@@ -179,7 +179,9 @@ label {
     &__img {
         position: absolute;
         max-width: 360px;
-        height: 240px;     border-radius: 5px;
+        height: 240px;
+        border-radius: 5px;
+        width: max-content;
     }
     svg {
         margin: 0 auto;
